--- a/index.html
+++ b/index.html
@@ -24,27 +24,24 @@
 
 
   <div class="main-div">
+    <div class="backgroudImage">
+
+    </div>
     <div class="todo-div">
-      <div class="todo-submit">
-        <div class="head">
-          <div class="">
-            <h2 class="logo">Todo App</h2>
-          </div>
-        </div>
-        <div class="todo-form-div">
-          <div class="form-div">
-            <input type="text" placeholder="Enter Your Task" name="" id="user_input">
-            <button id="add_btn">Add Task</button>
-          </div>
-        </div>
+      <div class="heading">
+        <h1>Todo App</h1>
+      </div>
+      <div class="input">
+        <input type="text" autocomplete="off" placeholder="Create new Todo" name="" id="user_input">
+        <button id="add_btn"><i class="bi bi-plus-circle"></i></button>
       </div>
       <div class="todo-result-div">
+
       </div>
     </div>
   </div>
 
 
-  </div>
   <script src="./script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.all.min.js"></script>
 </body>
